# 2d-game

./: .gitignore  CMakeLists.txt
Assets/enemy_layouts/: boss.enemies  map2.enemies  map4.enemies
Assets/maps/: map1.map  map2.map  map3.map  map4.map
Assets/special_maps/: boss.map  start.map
src/: Collision_detector.cpp  Collision_detector.h  Enemy.cpp  Enemy.h  EnemyController.cpp  EnemyController.h  Map_parser.cpp  Map_parser.h  Menu.cpp  Menu.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  ProjectileManager.cpp  ProjectileManager.h  SaverAndLoader.cpp  SaverAndLoader.h  Terrain.cpp  Terrain.h  UI.cpp  UI.h  Weapon.cpp  Weapon.h  main.cpp  map_parser.cpp  map_parser.h  player.cpp  player.h
